Refactor of an export.